@@ -1,3 +1,14 @@
+2002-02-01  Ryan C Yeske  <rcyeske@vcn.bc.ca>
+
+	* nethack.el (nethack-black-face, nethack-green-face) 
+	(nethack-brown-face, nethack-blue-face, nethack-magenta-face) 
+	(nethack-cyan-face, nethack-bright-green-face) 
+	(nethack-bright-blue-face): Fix colors.
+
+	* nethack-api.el (nethack-status-good-face)
+	(nethack-status-bad-face)
+	(nethack-status-neutral-face): Fix colors.
+
 2002-01-30  Ryan C Yeske  <rcyeske@vcn.bc.ca>
 
 	* enh-331.patch: Add file.
